tests/baselines/reference/stringIndexerAndConstructor1.errors.txt
tests/cases/compiler/stringIndexerAndConstructor1.ts(3,5): error TS2411: Property '""' of type 'string' is not assignable to 'string' index type 'number'.


==== tests/cases/compiler/stringIndexerAndConstructor1.ts (1 errors) ====
    interface I {
        [s: string]: number;
        "": string;
        ~~
!!! error TS2411: Property '""' of type 'string' is not assignable to 'string' index type 'number'.
    }